// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider[Base] should render correctly  1`] = `
<div
  style="font-size: 12px;"
>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="cd1q7j4 soui-divider-wrapper c-5taznt soui-divider-horizontal"
  />
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
</div>
`;

exports[`Divider[Base] should render correctly about text 1`] = `
<div
  style="font-size: 12px;"
>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="cd1q7j4 soui-divider-wrapper c-5taznt soui-divider-horizontal c-2vhp3u soui-divider-with-text c-l7exk5 soui-divider-with-text-center"
  >
    <span
      class="ctajss0 soui-divider-inner-text"
    >
      Center
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="cd1q7j4 soui-divider-wrapper c-5taznt soui-divider-horizontal c-2vhp3u soui-divider-with-text ceziwnh soui-divider-with-text-left"
  >
    <span
      class="ctajss0 soui-divider-inner-text"
    >
      Left
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="cd1q7j4 soui-divider-wrapper c-5taznt soui-divider-horizontal c-2vhp3u soui-divider-with-text c-wj4xka soui-divider-with-text-right"
  >
    <span
      class="ctajss0 soui-divider-inner-text"
    >
      Right
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
</div>
`;

exports[`Divider[Base] should render correctly about vertical 1`] = `
<span
  style="display: inline-block; line-height: 22px; font-size: 14px;"
>
  Item 1
</span>
`;
